--- a/app/src/main/res/layout/fragment_main_window.xml
+++ b/app/src/main/res/layout/fragment_main_window.xml
@@ -33,6 +33,8 @@
 
         <EditText
             android:id="@+id/pressed_view"
+            android:cursorVisible="false"
+            android:focusableInTouchMode="false"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintWidth_default="percent"
@@ -61,7 +63,7 @@
         android:layout_marginRight="5dp"
         android:layout_marginBottom="20dp"
         app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent="0.15"
+        app:layout_constraintHeight_percent="0.2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
