Create ListAdapter and Result Model. Start making a logic. Not Calculate a Bulls.

--- a/app/src/main/res/layout/fragment_main_window.xml
+++ b/app/src/main/res/layout/fragment_main_window.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -47,12 +48,16 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/try_list"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/input_block"
         app:layout_constraintBottom_toTopOf="@id/button_block"
+
         />
 
     <androidx.constraintlayout.widget.ConstraintLayout
