Done Logic, fixed problems. Working version.

--- a/app/src/main/res/layout/fragment_about_developer.xml
+++ b/app/src/main/res/layout/fragment_about_developer.xml
@@ -5,13 +5,26 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Developer: "
+        android:text="Developer: Vasiuk Dmytro"
         android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/group"
+        app:layout_constraintVertical_chainStyle="packed"
+        />
+    <TextView
+        android:id="@+id/group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Group: Kit-211"
+        android:textSize="30sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/name"
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
