--- a/app/src/main/res/layout/fragment_start_game_menu.xml
+++ b/app/src/main/res/layout/fragment_start_game_menu.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         app:layout_constraintHeight_default="percent"
         app:layout_constraintHeight_percent="0.25"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,60 +22,89 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent="0.4"
-        app:layout_constraintVertical_bias="0.75"
+        app:layout_constraintHeight_percent="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintVertical_bias="0.85">
 
         <Button
             android:id="@+id/start_button"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginBottom="0dp"
             android:onClick="TestButton"
             android:text="Start Game"
-            android:layout_marginBottom="20dp"
+            app:layout_constraintBottom_toTopOf="@id/difficulties"
             app:layout_constraintHeight_default="percent"
-            app:layout_constraintWidth_default="percent"
-            app:layout_constraintHeight_percent="0.25"
-            app:layout_constraintWidth_percent="0.5"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHeight_percent="0.2"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/about_button"
             app:layout_constraintVertical_chainStyle="packed"
-            />
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent="0.5" />
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/difficulties"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:hint="Choose game mode"
+            app:layout_constraintBottom_toTopOf="@id/about_button"
+            app:layout_constraintHeight_default="percent"
+            app:layout_constraintHeight_percent="0.2"
+            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/start_button"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent="0.5">
+
+            <AutoCompleteTextView
+                android:id="@+id/dropdown_menu_modes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="none" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/about_button"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:text="About Developer"
             android:layout_marginBottom="20dp"
+            android:text="About Developer"
+            app:layout_constraintBottom_toTopOf="@id/close_button"
             app:layout_constraintHeight_default="percent"
-            app:layout_constraintWidth_default="percent"
-            app:layout_constraintHeight_percent="0.25"
-            app:layout_constraintWidth_percent="0.5"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHeight_percent="0.2"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/start_button"
-            app:layout_constraintBottom_toTopOf="@id/close_button" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/difficulties"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent="0.5" />
 
         <Button
             android:id="@+id/close_button"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginBottom="20dp"
             android:text="Close"
             app:layout_constraintHeight_default="percent"
-            app:layout_constraintWidth_default="percent"
-            app:layout_constraintHeight_percent="0.25"
-            app:layout_constraintWidth_percent="0.5"
+            app:layout_constraintHeight_percent="0.2"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/about_button"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent="0.5" />
+
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
