--- a/app/src/main/res/layout/activity_relative_main_horizontal.xml
+++ b/app/src/main/res/layout/activity_relative_main_horizontal.xml
@@ -17,21 +17,21 @@
     <ListView
         android:id="@+id/try_list"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="120dp"
         android:divider="@null"
         android:layout_below="@id/pressed_view" />
 
     <TextView
         android:id="@+id/text_result"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="25dp"
         android:layout_below="@id/try_list"
         android:textSize="20sp" />
 
     <RelativeLayout
         android:id="@+id/keyboard"
         android:layout_width="match_parent"
-        android:layout_height="170dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/text_result"
         android:layout_alignParentBottom="true"
         >
@@ -85,10 +85,10 @@
         <Button
             android:id="@+id/button_del"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@id/button_4"
+            android:layout_alignParentRight="true"
             android:layout_width="180dp"
             android:layout_height="45dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="25dp"
             android:text="DEL" />
 
         <Button
@@ -140,10 +140,10 @@
         <Button
             android:id="@+id/button_submit"
             android:layout_below="@id/button_del"
-            android:layout_toRightOf="@id/button_9"
+            android:layout_alignParentRight="true"
             android:layout_width="180dp"
             android:layout_height="45dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="25dp"
             android:text="OK" />
 
         </RelativeLayout>
