--- a/app/src/main/res/layout/activity_relative_start_horizontal.xml
+++ b/app/src/main/res/layout/activity_relative_start_horizontal.xml
@@ -12,12 +12,11 @@
         android:layout_height="110dp"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
-        android:layout_marginTop="20dp"
         android:src="@drawable/cow_pic"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/cow_img"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="20dp">
@@ -31,7 +30,7 @@
             <Button
                 android:id="@+id/start_btn"
                 android:layout_width="250dp"
-                android:layout_height="90dp"
+                android:layout_height="70dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginRight="50dp"
@@ -42,7 +41,7 @@
                 android:id="@+id/difficulties"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="250dp"
-                android:layout_height="90dp"
+                android:layout_height="70dp"
                 android:hint="Choose game mode"
                 android:layout_toRightOf="@id/start_btn">
 
@@ -62,12 +61,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/line1"
+            android:layout_marginTop="10dp"
             android:layout_centerInParent="true">
 
             <Button
                 android:id="@+id/about_btn"
                 android:layout_width="250dp"
-                android:layout_height="90dp"
+                android:layout_height="70dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginRight="50dp"
@@ -76,7 +76,7 @@
             <Button
                 android:id="@+id/close_btn"
                 android:layout_width="250dp"
-                android:layout_height="90dp"
+                android:layout_height="70dp"
                 android:layout_toRightOf="@id/about_btn"
                 android:text="Close"/>
 
